bug/fix overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 html {
-  @apply scroll-smooth;
+  @apply scroll-smooth overflow-x-hidden;
 }
 
 *::-webkit-scrollbar {
@@ -25,6 +25,7 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* overflow-x: hidden; */
 }
 
 body {
